--- a/index.html
+++ b/index.html
@@ -5,12 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anti age - самый уникальный тур</title>
+    <link rel="icon" href="sun_8038954.png">
     <style>
         * {
             margin: 0;
             box-sizing: border-box;
         }
 
+        area {
+            cursor: url(hand-cursor_5987538.png), auto;
+        }
+
+        body {
+          cursor: url(ship_8038901.png), auto;
+        }
         section {
             width: 1168px;
             margin: 0 auto;
@@ -65,12 +73,13 @@
             letter-spacing: 0cm;
             text-align: left;
         }
-        .main-picture {
+      .inter {
             width: 704px;
             height: 383px;
             display: block;
             margin-bottom: 60px;
             margin-top: 60px;
+            cursor: url(hand-cursor_5987538.png), auto;
         }
 
         .description {
@@ -119,6 +128,7 @@
         border-radius: 10px;
         padding: 11px 24px;
         margin-bottom: 8px;
+        cursor: url(type_5987600.png), auto;
       }
 
       .form-button {
@@ -135,6 +145,7 @@
         padding: 11px 54px;
         cursor: pointer;
         margin-top: 24px;
+        cursor: url(hand-cursor_5987538.png), auto;
       }
       .wrapper{
           width: 90%;
@@ -301,18 +312,25 @@
   margin: 0 auto;
   font-family: var(--font-sans);
 }
+
+.containr {
+  width: 480px;
+}
+
 .question {
   padding-top: 50px; 
   padding-bottom: 50px;
 }
+
+
+
 .question_h3 {
   text-transform: uppercase;
   color: #8500C3;
   margin-bottom: 30px;
+  cursor: url(hand-cursor_5987538.png), auto;
 }
-.question_h3  {
-  cursor: pointer;
-}
+
 .question_p {
 margin-bottom: 40px;
 color: black;
@@ -328,6 +346,7 @@ max-width: 730px;
   background-position: center;
   margin-right: 15px;
   transform: rotate(-90deg);
+  
 }
 .question_h3.close::before {
   content: "";
@@ -448,7 +467,7 @@ background-image: url(IMG_20231231_141257_292.jpg)
 
 
 .btn {
-  cursor: pointer;
+  cursor: url(hand-cursor_5987538.png), auto;
   margin-top: 1.5rem;
   padding: 0.75rem 1.5rem;
   font-size: 0.65rem;
@@ -535,24 +554,25 @@ background-image: url(IMG_20231231_141257_292.jpg)
                 <h3>Вашему вниманию мы рады представить недельный тур "Anti Age"</h3>
                 <h4>Вы посетите:</h4>
             </section>
-            <section>
+            <section class="inter">
               <img class="main-picture" src="Group 61.png" alt="flowers_foto" style="margin:0px auto 0px auto; display:block" usemap="#imgmap202435174137">
               <map name="imgmap202435174137">
-                <area shape="rect" alt="" title="" coords="15,60,169,156" href="https://kinomonitor.ru/cinemas/iskra/schedule/?date=2024-02-11" target="_blank" />
-                <area shape="rect" alt="" title="" coords="198,68,335,155" href="https://muskrep.ru/custom/3" target="_blank" />
-                <area shape="rect" alt="" title="" coords="360,71,490,151" href="https://www.culture.ru/institutes/31271/dom-kultury-g-essentuki" target="_blank" />
-                <area shape="rect" alt="" title="" coords="548,80,699,156" href="https://essentuki.ru/dostoprimechatelnosti/gorodskoe-ozero.php" target="_blank" />
-                <area shape="circle" alt="" title="" coords="79,214,39" href="https://planeta-kmv.ru/" target="_blank" />
-                <area shape="rect" alt="" title="" coords="193,186,304,261" href="https://кинодружба.рф/" target="_blank" />
-                <area shape="rect" alt="" title="" coords="334,172,507,262" href="https://www.tourister.ru/world/europe/russia/city/yessentuki/nightclubs/26901" target="_blank" />
-                <area shape="rect" alt="" title="" coords="521,177,700,263" href="https://www.pyatigorsk.online/tosee/novopyatigorskoe_ozero/" target="_blank" />
-                <area shape="rect" alt="" title="" coords="19,291,197,373" href="https://academgallery.ru/" target="_blank" />
-                <area shape="rect" alt="" title="" coords="211,277,349,378" href="https://eureka-kvest.ru" target="_blank" />
-                <area shape="rect" alt="" title="" coords="365,276,498,370" href="https://insectmuseum.ru" target="_blank" />
-                <area shape="rect" alt="" title="" coords="516,271,698,378" href="https://parkpyatigorsk.ru/" target="_blank" />
+                <area shape="rect" alt="" title="Кликните, чтобы перейти на сайт кинотеатра" coords="15,60,169,156" href="https://kinomonitor.ru/cinemas/iskra/schedule/?date=2024-02-11" target="_blank" />
+                <area shape="rect" alt="" title="Нажмите, чтобы перейти на сайт музея космонавтики" coords="198,68,335,155" href="https://muskrep.ru/custom/3" target="_blank" />
+                <area shape="rect" alt="" title="Нажмите, чтобы перейти на сайт Дома Культуры" coords="360,71,490,151" href="https://www.culture.ru/institutes/31271/dom-kultury-g-essentuki" target="_blank" />
+                <area shape="rect" alt="" title="Окунитесь в информационные волны о Ессентукском озере, кликнув на изображение" coords="548,80,699,156" href="https://essentuki.ru/dostoprimechatelnosti/gorodskoe-ozero.php" target="_blank" />
+                <area shape="circle" alt="" title="Узнайте новое о космосе, нажав на изобажение" coords="79,214,39" href="https://planeta-kmv.ru/" target="_blank" />
+                <area shape="rect" alt="" title="Нажатие на изображение позволит вам узнать о премьерах фильмов и мультфильмов" coords="193,186,304,261" href="https://кинодружба.рф/" target="_blank" />
+                <area shape="rect" alt="" title="Благодаря клику по изображению вы узнаете о премьере культурных мероприятий" coords="334,172,507,262" href="https://www.tourister.ru/world/europe/russia/city/yessentuki/nightclubs/26901" target="_blank" />
+                <area shape="rect" alt="" title="Попасть на сайт с информацией о Новопятигорском озере" coords="521,177,700,263" href="https://www.pyatigorsk.online/tosee/novopyatigorskoe_ozero/" target="_blank" />
+                <area shape="rect" alt="" title="Описание лучшего заведения для организации праздника откроется при нажатии на изображение" coords="19,291,197,373" href="https://academgallery.ru/" target="_blank" />
+                <area shape="rect" alt="" title="Посмотреть описание квест-центра можно при нажатии на изображение" coords="211,277,349,378" href="https://eureka-kvest.ru" target="_blank" />
+                <area shape="rect" alt="" title="Исследовать мир насекомых вы сможете, кликнув на изображение" coords="365,276,498,370" href="https://insectmuseum.ru" target="_blank" />
+                <area shape="rect" alt="" title="После нажатия на изображение перед вами откроется описание лучшего парка аттракционов" coords="516,271,698,378" href="https://parkpyatigorsk.ru/" target="_blank" />
               </map>
                   </div>
                   </map> 
+                  <h5>Нажатие на изображение позволит вам узнать подробную информацию о локации</h5>
             </section>
             <section class="description">
                 <p>Незабываемая экскурсия по развлекательным местам, которые расположены в следующих городах: Кисловодск,&nbsp;Ессентуки, 
