--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@ background-image: url(IMG_20231231_141257_292.jpg)
                 <div class="content">
                   <h2 class="title">5 день</h2>
                   <p class="copy">У вас будет возможность прогуляться по городу Пятигорску и заглянуть 
-                    в торгово-развлекательный центр "Галерея" и планетарий. Возможна поездка на Новопятигорское озеро и прогулка по парку Победы.
+                    в торгово-развлекательный центр "Галерея". Возможна поездка на Новопятигорское озеро и прогулка по парку Победы.
                   </p>
                 </div>
               </div>
@@ -633,15 +633,13 @@ background-image: url(IMG_20231231_141257_292.jpg)
                   <h2 class="title">6 день</h2>
                   <p class="copy">Из города Пятигорск мы совершим поездку в город Минеральные воды. 
                     Мы посетим главную достопримечательность города Минеральные воды - шахматную доску. 
-                    Затем мы совершим поездку в ТРЦ "Вершина".
                   </p>
                 </div>
               </div>
               <div class="card">
                 <div class="content">
                   <h2 class="title">7 день</h2>
-                  <p class="copy">Из города Пятигоск мы совершим поездку в город Ессентуки, в котором мы посетим концертный зал имени Шаляпина и 
-                    историко-краеведческий музей.
+                  <p class="copy">Из города Пятигоск мы совершим поездку в город Ессентуки, в котором мы посетим антикафе. По возможности мы совершим поездку на Ессентукское озеро
                   </p>
                 </div>
               </div>
