--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ background-image: url(IMG_20231231_141257_292.jpg)
               <div class="card">
                 <div class="content">
                   <h2 class="title">7 день</h2>
-                  <p class="copy">Из города Пятигоск мы совершим поездку в город Ессентуки, в котором мы посетим антикафе. По возможности мы совершим поездку на Ессентукское озеро
+                      <p class="copy">Из города Минеральные Воды мы совершим поездку в город Ессентуки, в котором мы посетим антикафе. По возможности мы совершим поездку на Ессентукское озеро
                   </p>
                 </div>
               </div>
