--- a/index.html
+++ b/index.html
@@ -632,7 +632,8 @@ background-image: url(IMG_20231231_141257_292.jpg)
                 <div class="content">
                   <h2 class="title">6 день</h2>
                   <p class="copy">Из города Пятигорск мы совершим поездку в город Минеральные воды. 
-                    Мы посетим главную достопримечательность города Минеральные воды - шахматную доску. 
+                    Мы посетим главную достопримечательность города Минеральные воды - шахматную доску. Потом мы совершим поездку в 
+                      торговый центр "Вершина"
                   </p>
                 </div>
               </div>
