--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@ background-image: url(IMG_20231231_141257_292.jpg)
         <body>
             <section>
               <h1>Добро пожаловать!</h1>
-                <h3>Вашему вниманию мы рады представить недельный тур "Anti Age"</h3>
+                <h3>Вашему вниманию мы рады представить недельный тур "Anti Age"!</h3>
                 <h4>Вы посетите:</h4>
             </section>
             <section class="inter">
@@ -633,14 +633,14 @@ background-image: url(IMG_20231231_141257_292.jpg)
                   <h2 class="title">6 день</h2>
                   <p class="copy">Из города Пятигорск мы совершим поездку в город Минеральные воды. 
                     Мы посетим главную достопримечательность города Минеральные воды - шахматную доску. Потом мы совершим поездку в 
-                      торговый центр "Вершина"
+                      торговый центр "Вершина".
                   </p>
                 </div>
               </div>
               <div class="card">
                 <div class="content">
                   <h2 class="title">7 день</h2>
-                      <p class="copy">Из города Минеральные Воды мы совершим поездку в город Ессентуки, в котором мы посетим антикафе и другие развлекательные заведения. По возможности мы совершим поездку на Ессентукское озеро
+                      <p class="copy">Из города Минеральные Воды мы совершим поездку в город Ессентуки, в котором мы посетим антикафе и другие развлекательные заведения. По возможности мы совершим поездку на Ессентукское озеро.
                   </p>
                 </div>
               </div>
